--- a/CoffeeMaker/bin/.gitignore
+++ b/CoffeeMaker/bin/.gitignore
@@ -2,3 +2,8 @@
 /RecipeTest.class
 /InventoryTest.class
 /CoffeeMakerTest.class
+/AcceptanceTests.class
+/AcceptanceTest.class
+/MainTest.class
+/MainTest2.class
+/MainTest555.class
